--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -630,25 +630,7 @@ h3{
 //     background-color: rgb(177, 90, 119);
 // }
 
-#convoBox {
-    position: absolute;
-    overflow-x: hidden;
-    font-family: 'Roboto', sans-serif;
-    // pointer-events: none;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    left:0;
-    z-index: 0;
-    bottom: 60px;
-    width: 300px;
-    height: 230px;
-    box-sizing: border-box;
-    padding: 8px;
-    resize: none;
-    outline: none;
-    border: none;
-}
+
 
 //// Page Transition STARTS ////
 #fader {
@@ -695,12 +677,44 @@ h3{
         transform: translateY(0px);
 	}
 }
-//////////
+////////// Chatbox Talk Bubbles //////////
+#convoBox {
+    position: absolute;
+    overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
+    pointer-events: none;
+    display: flex;
+    justify-content: flex-end;
+    // flex-direction: column-reverse;
+    flex-direction: column;
+    z-index: 0;
+    bottom: 60px;
+    width: 300px;
+    height: 230px;
+    box-sizing: border-box;
+    padding: 8px;
+}
+.individualChatBlock{
+    clear: both;
+    min-width: 100px;
+    position: relative;
+    margin: 14px 0 12px 0;
+    display: flex;
+    justify-content:flex-end;
+}
+.timestampDiv{
+    position: absolute;
+    right:4px;
+    top:-22px;
+    font-size: 11px;
+    font-weight: 400;
+    white-space: nowrap;
+    color: $textHover;
+} 
 .messengerRight{
     position: relative;
     right:0px;
-    display: inline-block;
-    margin-bottom: 12px;
+    max-width: 240px;
     border-radius:12px;
     padding: 6px 10px;
     font-size: 14px;
@@ -709,6 +723,7 @@ h3{
     font-weight: 300;
     background-color:$highlight;
     color:$bkg-light;
+    hyphens: auto;
 }
 ///////////////
 
