--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -443,7 +443,7 @@ h3{
 // Message Container STARTS
 .messageContainer {
     width: 300px;
-    height: 375px;
+    height: 405px;
     box-sizing: border-box;
     border-radius: 10px;
     background-color:rgba(255,255,255,1);
@@ -584,7 +584,7 @@ h3{
     letter-spacing: .03em;
     border:0px solid $bkg-light;
     background-color: $bkg-grey;
-    bottom:12px;
+    bottom:42px;
     right:12px;
     width: 42px;
     height: 42px;
@@ -610,7 +610,7 @@ h3{
     font-family:Arial, Helvetica, sans-serif;
     letter-spacing: .06em;
     font-size: 14px;
-    bottom: 14px;
+    bottom: 44px;
     left:14px;
     width: 226px;
     height: 40px;
@@ -623,6 +623,23 @@ h3{
     outline: none;
     border:4px solid $bkg-grey;
     transition: all .15s linear;
+}
+
+#emojiBar{
+    position: absolute;
+    opacity: .3;
+    display: flex;
+    justify-content: flex-end;
+    bottom: 12px;
+    padding-top: 4px;
+    left: 20px;
+    height: 20px;
+    width: 260px;
+    border-top: 1px solid $bkg-grey;
+    transition: opacity .15s linear;
+}
+#emojiBar:hover{
+    opacity: 1;   
 }
 // Message Container ENDS
 
@@ -678,21 +695,28 @@ h3{
 	}
 }
 ////////// Chatbox Talk Bubbles //////////
-#convoBox {
+#convoBoxWrapper{
+    overflow-x: hidden;
     position: absolute;
+    z-index: 0;
+    bottom: 0px;
+    width: 298px;
+    height: 231px;
+    position: relative;
+    display: flex;
+    overflow-y: auto;
+    flex-direction: column-reverse;
+}
+#convoBox {
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
-    pointer-events: none;
     display: flex;
     justify-content: flex-end;
-    // flex-direction: column-reverse;
     flex-direction: column;
-    z-index: 0;
-    bottom: 60px;
-    width: 300px;
-    height: 230px;
+    width: 297px;
     box-sizing: border-box;
-    padding: 8px;
+    padding: 8px 18px 0px 18px;
+    flex: 0 0 auto
 }
 .individualChatBlock{
     clear: both;
@@ -714,8 +738,10 @@ h3{
 .messengerRight{
     position: relative;
     right:0px;
-    max-width: 240px;
-    border-radius:12px;
+    max-width: 220px;
+    border-top-left-radius:12px;
+    border-top-right-radius:12px;
+    border-bottom-left-radius:12px;
     padding: 6px 10px;
     font-size: 14px;
     letter-spacing: .02em;
