--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -654,8 +654,6 @@ h3 {
 #emojiBar {
   position: absolute;
   opacity: .3;
-  display: flex;
-  justify-content: flex-end;
   bottom: 12px;
   padding-top: 4px;
   left: 20px;
@@ -667,6 +665,19 @@ h3 {
 
 #emojiBar:hover {
   opacity: 1;
+}
+
+#emojiList {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0;
+  margin: 0;
+}
+
+#emojiList li {
+  list-style: none;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 #fader {
