Finished adding emoji

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -8,6 +8,7 @@ $glow:0px 0px 20px rgba(112, 136, 215, 0.7);
 $bkg-light: #ffffff;
 $bkg-grey: #F0F2F5;
 $bkg-grey-hover: #AAA;
+$bkg-grey-hover-light: #E5E5E5;
 $green:#00e400;
 $greenHover:#00AF00;
 $bkg-grey-rule:#CACACA;
