--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -200,7 +200,7 @@ h3 {
   font-family: 'Roboto', sans-serif;
   color: #72767D;
   text-align: right;
-  font-size: 13px;
+  font-size: 14px;
   display: block;
   bottom: 20px;
   left: 20px;
@@ -321,7 +321,7 @@ h3 {
 
 #profileBtn {
   position: absolute;
-  z-index: 6;
+  z-index: 5;
   top: 13px;
   right: 14px;
   width: 72px;
@@ -454,13 +454,13 @@ h3 {
 }
 
 .messageContainer {
-  width: 300px;
+  width: 315px;
   height: 405px;
   box-sizing: border-box;
   border-radius: 10px;
   background-color: white;
   position: absolute;
-  padding-top: 80px;
+  padding-top: 76px;
   z-index: 5;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -469,6 +469,7 @@ h3 {
 
 .messageContainer #greyHeader {
   position: absolute;
+  z-index: 3;
   top: 0;
   right: 0;
   left: 0;
@@ -483,7 +484,7 @@ h3 {
 
 .messageContainer #senderProfilePic {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   left: 18px;
   top: 26px;
   background-color: #ffffff;
@@ -503,7 +504,7 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 17px;
-  z-index: 2;
+  z-index: 3;
   height: 17px;
   color: #1c1e21;
   display: block;
@@ -514,6 +515,7 @@ h3 {
 
 .messageContainer #senderProfileTheme {
   position: absolute;
+  z-index: 3;
   right: 66px;
   top: 36px;
   width: 33px;
@@ -529,6 +531,7 @@ h3 {
 .messageContainer #messageContainerClose {
   position: absolute;
   right: 18px;
+  z-index: 3;
   top: 34px;
   width: 30px;
   height: 30px;
@@ -566,7 +569,7 @@ h3 {
   font-size: 13px;
   letter-spacing: .02em;
   color: #ffffff;
-  z-index: 2;
+  z-index: 3;
   height: 32px;
   box-sizing: border-box;
   border-radius: 8px;
@@ -587,10 +590,10 @@ h3 {
 #mydivheader {
   position: absolute;
   top: 4px;
-  z-index: 2;
+  z-index: 3;
   height: 6px;
   left: 24px;
-  width: 250px;
+  width: 265px;
   margin: 6px auto 0px;
   cursor: move;
   background-color: #F0F2F5;
@@ -603,12 +606,13 @@ h3 {
 }
 
 #postBtn {
+  display: none;
   position: absolute;
   border-radius: 100%;
   letter-spacing: .03em;
   border: 0px solid #ffffff;
   background-color: #F0F2F5;
-  bottom: 42px;
+  bottom: 12px;
   right: 12px;
   width: 42px;
   height: 42px;
@@ -630,54 +634,74 @@ h3 {
   color: #ffffff !important;
 }
 
+#emojiBtn {
+  position: absolute;
+  border-radius: 100%;
+  border: 0px solid #ffffff;
+  bottom: 15px;
+  right: 15px;
+  width: 39px;
+  height: 39px;
+  background-image: url(../images/emojiBtn.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+#emojiBtn:hover {
+  background-color: #E5E5E5;
+}
+
 #postBox {
   position: absolute;
   color: #1c1e21;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: .06em;
   font-size: 14px;
-  bottom: 44px;
-  left: 14px;
-  width: 226px;
+  bottom: 14px;
+  left: 15px;
+  min-width: 285px;
+  max-width: 270px;
   height: 40px;
   box-sizing: border-box;
-  padding: 8px 22px 6px 14px;
+  padding: 8px 42px 6px 8px;
   line-height: 1.3em;
   background-color: #F0F2F5;
-  border-radius: 30px;
+  border-radius: 18px;
   resize: none;
   outline: none;
+  overflow: hidden;
   border: 4px solid #F0F2F5;
-  transition: all .15s linear;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 #emojiBar {
   position: absolute;
-  opacity: .3;
-  bottom: 12px;
-  padding-top: 4px;
-  left: 20px;
-  height: 20px;
-  width: 260px;
-  border-top: 1px solid #F0F2F5;
-  transition: opacity .15s linear;
-}
-
-#emojiBar:hover {
-  opacity: 1;
+  display: none;
+  border-radius: 12px;
+  bottom: 60px;
+  padding: 8px 4px 10px 4px;
+  left: 15px;
+  width: 280px;
+  background-color: #ffffff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 #emojiList {
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
 
 #emojiList li {
   list-style: none;
-  margin-left: 10px;
+  margin-left: 13px;
   cursor: pointer;
+}
+
+#emojiList li:hover {
+  background-color: #F0F2F5;
 }
 
 #fader {
@@ -737,8 +761,8 @@ h3 {
   position: absolute;
   z-index: 0;
   bottom: 0px;
-  width: 298px;
-  height: 231px;
+  width: 313px;
+  height: 270px;
   position: relative;
   display: flex;
   overflow-y: auto;
@@ -751,9 +775,9 @@ h3 {
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
-  width: 297px;
+  width: 312px;
   box-sizing: border-box;
-  padding: 8px 18px 0px 18px;
+  padding: 8px 30px 0px 18px;
   flex: 0 0 auto;
 }
 
