Added 2-way convo, updated icons

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -11,5 +11,5 @@ $bkg-grey-hover: #AAA;
 $bkg-grey-hover-light: #E5E5E5;
 $green:#00e400;
 $greenHover:#00AF00;
-$bkg-grey-rule:#CACACA;
+$bkg-grey-rule:#DEDEDE;
 $altBkg:rgba(0, 0, 0, 0.8);
