--- a/assets/styles/slidesJCCO.scss
+++ b/assets/styles/slidesJCCO.scss
@@ -53,7 +53,7 @@ menuBtn 6
 
 
 .pic1 {
-    background-image: url(../images/slides/jcco/JCCO_1.jpg);
+    background-image: url(../images/slides/jcco/JCCO_1.gif);
 }
 
 .pic2 {
