--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -326,10 +326,11 @@ h3 {
   right: 14px;
   width: 72px;
   height: 72px;
-  border-radius: 4px;
+  border-radius: 10px;
   cursor: pointer;
   background-color: #F0F2F5;
   box-sizing: border-box;
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.19), 0 0px 6px rgba(0, 0, 0, 0.23);
   transition: background-color .15s linear;
   background-size: contain;
   display: flex;
@@ -346,7 +347,7 @@ h3 {
   display: table-cell;
   margin-top: 100px;
   width: 100%;
-  border-bottom: 1px solid #CACACA;
+  border-bottom: 1px solid #DEDEDE;
 }
 
 #rightRail {
@@ -363,11 +364,11 @@ h3 {
   position: absolute;
   width: 100%;
   height: 14px;
-  color: #72767D;
-  font-weight: 400;
+  color: #1c1e21;
+  font-weight: 500;
   text-align: center;
   font-size: 13px;
-  letter-spacing: .03em;
+  letter-spacing: .02em;
 }
 
 #rightRail #sectionHeaderAlbums {
@@ -386,7 +387,7 @@ h3 {
   top: -12px;
   display: table-cell;
   width: 72px;
-  border-bottom: 1px solid #CACACA;
+  border-bottom: 1px solid #DEDEDE;
 }
 
 #rightRail #chooseAlbumBox {
@@ -427,14 +428,19 @@ h3 {
 
 .startChatBottomBtn {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 600;
   z-index: 4;
   top: 294px;
   right: 32px;
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background-color: #CCC;
-  background-image: url(../images/person_icon_rail.png);
+  background-color: #70BED7;
   background-size: 90%;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -502,7 +508,7 @@ h3 {
 .messageContainer #senderProfileName {
   position: absolute;
   font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 17px;
   z-index: 3;
   height: 17px;
@@ -516,7 +522,7 @@ h3 {
 .messageContainer #senderProfileTheme {
   position: absolute;
   z-index: 3;
-  right: 66px;
+  right: 62px;
   top: 36px;
   width: 33px;
   height: 24px;
@@ -547,17 +553,34 @@ h3 {
   background-color: #F0F2F5;
 }
 
+.messageContainer #location {
+  position: absolute;
+  z-index: 3;
+  right: 116px;
+  top: 36px;
+  width: 18px;
+  height: 24px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-image: url(../images/location_icon.png);
+  cursor: pointer;
+}
+
+.messageContainer #locationAlt {
+  right: 92px;
+}
+
 .messageContainer #closeChatAlt {
   right: -8px;
 }
 
 .messageContainer #playThemeAlt {
-  right: 40px;
+  right: 32px;
 }
 
 .messageContainer #headerAlt {
   top: -40px;
-  left: 90px;
+  left: 105px;
 }
 
 .messageContainer .altClass {
@@ -637,6 +660,7 @@ h3 {
 #emojiBtn {
   position: absolute;
   border-radius: 100%;
+  background-color: transparent;
   border: 0px solid #ffffff;
   bottom: 15px;
   right: 15px;
@@ -649,13 +673,13 @@ h3 {
 }
 
 #emojiBtn:hover {
-  background-color: #E5E5E5;
+  background-color: #F0F2F5;
 }
 
 #postBox {
   position: absolute;
   color: #1c1e21;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: .06em;
   font-size: 14px;
   bottom: 14px;
@@ -666,13 +690,18 @@ h3 {
   box-sizing: border-box;
   padding: 8px 42px 6px 8px;
   line-height: 1.3em;
-  background-color: #F0F2F5;
+  background-color: #ffffff;
   border-radius: 18px;
   resize: none;
   outline: none;
   overflow: hidden;
-  border: 4px solid #F0F2F5;
+  border: 4px solid #ffffff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #C3C3C3;
 }
 
 #emojiBar {
@@ -781,7 +810,7 @@ h3 {
   flex: 0 0 auto;
 }
 
-.individualChatBlock {
+.individualChatBlockEnd {
   clear: both;
   min-width: 100px;
   position: relative;
@@ -790,9 +819,28 @@ h3 {
   justify-content: flex-end;
 }
 
+.individualChatBlockStart {
+  clear: both;
+  min-width: 100px;
+  position: relative;
+  margin: 14px 0 12px 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
 .timestampDiv {
   position: absolute;
   right: 4px;
+  top: -22px;
+  font-size: 11px;
+  font-weight: 400;
+  white-space: nowrap;
+  color: #CCC;
+}
+
+.timestampDivLeft {
+  position: absolute;
+  left: 0;
   top: -22px;
   font-size: 11px;
   font-weight: 400;
@@ -814,6 +862,23 @@ h3 {
   font-weight: 300;
   background-color: #7088D7;
   color: #ffffff;
+  hyphens: auto;
+}
+
+.messengerLeft {
+  position: relative;
+  left: 0px;
+  max-width: 220px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 6px 10px;
+  font-size: 14px;
+  letter-spacing: .02em;
+  line-height: 1.4em;
+  font-weight: 400;
+  background-color: #F0F2F5;
+  color: #72767D;
   hyphens: auto;
 }
 
