--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -316,15 +316,12 @@ h3{
     right: 14px;
     width: 72px;
     height: 72px;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     background-color: $bkg-grey;
     box-sizing: border-box;
-    // border:3px solid $bkg-grey;
-    // box-shadow: 0 0px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    // box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
-    // -webkit-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
-    // -moz-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
+    // border:1px solid $bkg-light;
+    box-shadow: 0 0px 20px rgba(0,0,0,0.19), 0 0px 6px rgba(0,0,0,0.23);
     transition: background-color .15s linear;
     background-size: contain;
     display: flex;
@@ -357,11 +354,11 @@ h3{
         position: absolute;
         width: 100%;
         height: 14px;
-        color: $text;
-        font-weight: 400;
+        color: $textDark;
+        font-weight: 500;
         text-align: center;
         font-size: 13px;
-        letter-spacing: .03em;
+        letter-spacing: .02em;
     }
     #sectionHeaderAlbums{
         top:111px
@@ -416,14 +413,20 @@ h3{
 }
 .startChatBottomBtn{
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $bkg-light;
+    font-size: 20px;
+    font-weight: 600;
     z-index: 4;
     top: 294px;
     right:32px;
     width: 40px;
     height: 40px;
     border-radius: 4px;
-    background-color: $textHover;
-    background-image: url(../images/person_icon_rail.png);
+    background-color: #70BED7;
+    // background-image: url(../images/person_icon_rail.png);
     background-size:90%;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -488,7 +491,7 @@ h3{
     #senderProfileName{
         position: absolute;
         font-family: 'Roboto', sans-serif;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 17px;
         z-index: 3;
         height: 17px;
@@ -501,7 +504,7 @@ h3{
     #senderProfileTheme{
         position: absolute;
         z-index: 3;
-        right: 66px;
+        right: 62px;
         top:36px;
         width: 33px;
         height: 24px;
@@ -528,15 +531,30 @@ h3{
     #messageContainerClose:hover{
         background-color: $bkg-grey;
     }
+    #location{
+        position: absolute;
+        z-index: 3;
+        right: 116px;
+        top:36px;
+        width: 18px;
+        height: 24px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-image: url(../images/location_icon.png);
+        cursor: pointer;
+    }
+    #locationAlt{
+        right:92px;
+    }
     #closeChatAlt{
         right:-8px;
     }
     #playThemeAlt{
-        right:40px;
+        right:32px;
     }
     #headerAlt{
         top:-40px;
-        left:90px
+        left:105px
     }
     .altClass{
         position: absolute;
@@ -611,6 +629,7 @@ h3{
 #emojiBtn{
     position: absolute;
     border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0);  
     border:0px solid $bkg-light;
     bottom:15px;
     right:15px;
@@ -623,13 +642,13 @@ h3{
 }
 
 #emojiBtn:hover{
-    background-color: $bkg-grey-hover-light;  
+    background-color: $bkg-grey;  
 }
 
 #postBox {
     position: absolute;
     color:$textDark;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: .06em;
     font-size: 14px;
     bottom: 14px;
@@ -640,15 +659,17 @@ h3{
     box-sizing: border-box;
     padding: 8px 42px 6px 8px;
     line-height: 1.3em;
-    background-color: $bkg-grey;
+    background-color: $bkg-light;
     border-radius: 18px;
     resize: none;
     outline: none;
     overflow:hidden;
-    border:4px solid $bkg-grey;
+    border:4px solid $bkg-light;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
 }
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #C3C3C3;
+  }
 
 #emojiBar{
     position: absolute;
@@ -749,13 +770,21 @@ h3{
     padding: 8px 30px 0px 18px;
     flex: 0 0 auto
 }
-.individualChatBlock{
+.individualChatBlockEnd{
     clear: both;
     min-width: 100px;
     position: relative;
     margin: 14px 0 12px 0;
     display: flex;
     justify-content:flex-end;
+}
+.individualChatBlockStart{
+    clear: both;
+    min-width: 100px;
+    position: relative;
+    margin: 14px 0 12px 0;
+    display: flex;
+    justify-content:flex-start;
 }
 .timestampDiv{
     position: absolute;
@@ -765,7 +794,16 @@ h3{
     font-weight: 400;
     white-space: nowrap;
     color: $textHover;
-} 
+}
+.timestampDivLeft{
+    position: absolute;
+    left:0;
+    top:-22px;
+    font-size: 11px;
+    font-weight: 400;
+    white-space: nowrap;
+    color: $textHover;
+}  
 .messengerRight{
     position: relative;
     right:0px;
@@ -780,6 +818,22 @@ h3{
     font-weight: 300;
     background-color:$highlight;
     color:$bkg-light;
+    hyphens: auto;
+}
+.messengerLeft{
+    position: relative;
+    left:0px;
+    max-width: 220px;
+    border-top-right-radius:12px;
+    border-bottom-left-radius:12px;
+    border-bottom-right-radius:12px;
+    padding: 6px 10px;
+    font-size: 14px;
+    letter-spacing: .02em;
+    line-height: 1.4em;
+    font-weight: 400;
+    background-color:$bkg-grey;
+    color:$text;
     hyphens: auto;
 }
 ///////////////
