--- a/assets/styles/slidesJCCO.css
+++ b/assets/styles/slidesJCCO.css
@@ -49,7 +49,7 @@ menuBtn 6
 }
 
 .pic1 {
-  background-image: url(../images/slides/jcco/JCCO_1.jpg);
+  background-image: url(../images/slides/jcco/JCCO_1.gif);
 }
 
 .pic2 {
