--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -440,10 +440,9 @@ h3 {
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background-color: #70BED7;
-  background-size: 90%;
+  background-color: #CCC;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: bottom;
   cursor: pointer;
 }
 
@@ -452,7 +451,7 @@ h3 {
   border-radius: 100%;
   border: 4px solid #ffffff;
   z-index: 4;
-  background-color: #00e400;
+  background-color: #CCC;
   top: 322px;
   right: 27px;
   width: 10px;
@@ -493,12 +492,11 @@ h3 {
   z-index: 3;
   left: 18px;
   top: 26px;
-  background-color: #ffffff;
+  background-color: #CCC;
   box-sizing: border-box;
   border-radius: 4px;
   width: 42px;
   height: 42px;
-  background-image: url(../images/profiles/jason.png);
   background-size: contain;
   box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
@@ -510,6 +508,7 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
   font-size: 17px;
+  text-transform: capitalize;
   z-index: 3;
   height: 17px;
   color: #1c1e21;
