--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -425,11 +425,10 @@ h3{
     width: 40px;
     height: 40px;
     border-radius: 4px;
-    background-color: #70BED7;
+    background-color: $textHover;
+    background-size: contain;
     // background-image: url(../images/person_icon_rail.png);
-    background-size:90%;
     background-repeat: no-repeat;
-    background-position: bottom;
     cursor: pointer;
 }
 .startChatBottomActivityBtn{
@@ -437,7 +436,7 @@ h3{
     border-radius: 100%;
     border:4px solid $bkg-light;
     z-index: 4;
-    background-color: $green;
+    background-color: $textHover;
     top: 322px;
     right:27px;
     width: 10px;
@@ -477,12 +476,11 @@ h3{
         z-index: 3;
         left:18px;
         top:26px;
-        background-color: $bkg-light;
+        background-color: $textHover;
         box-sizing: border-box;
         border-radius: 4px;
         width: 42px;
         height: 42px;
-        background-image: url(../images/profiles/jason.png);
         background-size: contain; 
         box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
         -webkit-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
@@ -493,6 +491,7 @@ h3{
         font-family: 'Roboto', sans-serif;
         font-weight: 600;
         font-size: 17px;
+        text-transform: capitalize;
         z-index: 3;
         height: 17px;
         color: $textDark;
