--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -552,21 +552,21 @@ h3 {
   background-color: #F0F2F5;
 }
 
-.messageContainer #location {
+.messageContainer #video {
   position: absolute;
   z-index: 3;
   right: 116px;
-  top: 36px;
-  width: 18px;
-  height: 24px;
+  top: 39px;
+  width: 32px;
+  height: 20px;
   background-position: center center;
   background-repeat: no-repeat;
-  background-image: url(../images/location_icon.png);
+  background-image: url(../images/video_icon.png);
   cursor: pointer;
 }
 
-.messageContainer #locationAlt {
-  right: 92px;
+.messageContainer #videoAlt {
+  right: 66px;
 }
 
 .messageContainer #closeChatAlt {
@@ -730,6 +730,14 @@ h3 {
 
 #emojiList li:hover {
   background-color: #F0F2F5;
+}
+
+#videoConference {
+  position: absolute;
+  top: 75px;
+  width: 315px;
+  height: 328px;
+  display: none;
 }
 
 #fader {
