--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -350,6 +350,33 @@ h3 {
   border-bottom: 1px solid #DEDEDE;
 }
 
+#logOutBtn {
+  position: absolute;
+  box-sizing: border-box;
+  padding-top: 3px;
+  z-index: 2;
+  top: -7px;
+  right: -7px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  font-size: 10px;
+  display: none;
+  background-color: #202225;
+  text-align: center;
+  background-size: contain;
+}
+
+#profileBtn:hover #logOutBtn {
+  display: block;
+}
+
+#profileBtn:hover #logOutBtn:hover {
+  background-color: red;
+}
+
 #rightRail {
   position: absolute;
   z-index: 4;
@@ -521,8 +548,8 @@ h3 {
 .messageContainer #senderProfileTheme {
   position: absolute;
   z-index: 3;
-  right: 62px;
-  top: 36px;
+  right: 63px;
+  top: 37px;
   width: 33px;
   height: 24px;
   background-image: url(../images/profileThemeBtn.png);
@@ -560,6 +587,7 @@ h3 {
   width: 32px;
   height: 20px;
   background-position: center center;
+  background-size: 90%;
   background-repeat: no-repeat;
   background-image: url(../images/video_icon.png);
   cursor: pointer;
