--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -295,9 +295,7 @@ h3{
         border-left: 14px solid $bkg-dark-transparent;
         border-bottom: 16px solid transparent;
     }
-
 }
-
 #logo{
     position: absolute;
     cursor: pointer;
@@ -328,11 +326,9 @@ h3{
     justify-content: center;
     align-items: center;
 }
-
 #profileBtn:hover {
     background-color: $bkg-light;
 }
-
 #profileBtn::after{
     content: "";
     display: table-cell;
@@ -340,7 +336,30 @@ h3{
     width: 100%;
     border-bottom: 1px solid $bkg-grey-rule;
 }
-
+#logOutBtn{
+    position: absolute;
+    box-sizing: border-box;
+    padding-top: 3px;
+    z-index: 2;
+    top:-7px;
+    right:-7px;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border:2px solid $bkg-light;
+    color: $bkg-light;
+    font-size: 10px;
+    display: none;
+    background-color: $bkg-dark;
+    text-align: center;
+    background-size: contain;
+}
+#profileBtn:hover #logOutBtn{
+    display: block;
+}
+#profileBtn:hover #logOutBtn:hover{
+    background-color: red;
+}
 #rightRail{
     position: absolute;
     z-index: 4;
@@ -376,7 +395,6 @@ h3{
         width: 72px;
         border-bottom: 1px solid $bkg-grey-rule;
     }
-
     #chooseAlbumBox{
         top:135px;
         background-image: url(../images/chooseAlbumBtn.png);
@@ -503,8 +521,8 @@ h3{
     #senderProfileTheme{
         position: absolute;
         z-index: 3;
-        right: 62px;
-        top:36px;
+        right: 63px;
+        top:37px;
         width: 33px;
         height: 24px;
         background-image: url(../images/profileThemeBtn.png);
@@ -538,6 +556,7 @@ h3{
         width: 32px;
         height: 20px;
         background-position: center center;
+        background-size: 90%;
         background-repeat: no-repeat;
         background-image: url(../images/video_icon.png);
         cursor: pointer;
