--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -392,10 +392,11 @@ h3 {
   width: 100%;
   height: 14px;
   color: #1c1e21;
+  text-transform: uppercase;
   font-weight: 500;
   text-align: center;
-  font-size: 13px;
-  letter-spacing: .02em;
+  font-size: 12px;
+  letter-spacing: .03em;
 }
 
 #rightRail #sectionHeaderAlbums {
@@ -483,6 +484,34 @@ h3 {
   right: 27px;
   width: 10px;
   height: 10px;
+}
+
+#startChatWrapper {
+  width: 320px;
+  height: 160px;
+}
+
+#startChatWrapper #startChatProfile {
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+  background-size: contain;
+  border-radius: 100%;
+  background-color: #F0F2F5;
+  box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
+}
+
+#startChatWrapper .startChatPicBox {
+  width: 100px;
+  height: 80px;
+  border-radius: 6px;
+  background-color: #F0F2F5;
+  float: left;
+  margin: 18px 10px 0 0;
+}
+
+#startChatWrapper .startChatPicBox:last-child {
+  margin-right: 0px;
 }
 
 .messageContainer {
@@ -729,6 +758,7 @@ h3 {
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #C3C3C3;
+  font-size: 13px;
 }
 
 #emojiBar {
@@ -920,7 +950,7 @@ h3 {
 #infoBox {
   /* Black box that appears over mugs */
   position: absolute;
-  max-width: 300px;
+  max-width: 360px;
   padding: 10px 20px;
   display: flex;
   justify-content: center;
