--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -20,6 +20,7 @@ body {
 
 a {
   text-decoration: none;
+  color: #72767D;
 }
 
 *:focus {
@@ -996,4 +997,19 @@ h3 {
 
 .infoHere span {
   display: none;
+}
+
+#aboutPage {
+  height: 100vh;
+  background-color: #F0F2F5;
+}
+
+#aboutPage p {
+  line-height: 1.9em;
+  color: #72767D;
+}
+
+#aboutWrapper {
+  width: 900px;
+  margin: 90px auto 0;
 }
