Adjusting mouseover events

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -15,7 +15,7 @@ body {
   background-color: #202225;
   overflow: hidden;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: .03em;
+  letter-spacing: .02em;
 }
 
 a {
@@ -287,25 +287,15 @@ h3 {
 
 #overlayOptions {
   position: absolute;
-  z-index: 99;
-  background-color: rgba(22, 24, 27, 0.92);
+  display: none;
+  z-index: 9;
+  background-color: rgba(22, 24, 27, 0.42);
   left: 0;
   top: 0;
   bottom: 0;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(4px);
   right: 100%;
-  transition: right .25s ease-out;
-}
-
-#overlayOptions #triangle-right {
-  position: absolute;
-  right: 0;
-  width: 0;
-  height: 0;
-  backdrop-filter: blur(5px);
-  border-top: 16px solid transparent;
-  border-left: 14px solid rgba(22, 24, 27, 0.92);
-  border-bottom: 16px solid transparent;
+  right: 100px;
 }
 
 #logo {
@@ -322,7 +312,7 @@ h3 {
 
 #profileBtn {
   position: absolute;
-  z-index: 5;
+  z-index: 21;
   top: 13px;
   right: 14px;
   width: 72px;
@@ -380,7 +370,7 @@ h3 {
 
 #rightRail {
   position: absolute;
-  z-index: 4;
+  z-index: 20;
   right: 0;
   top: 0;
   bottom: 0;
@@ -463,7 +453,7 @@ h3 {
   color: #ffffff;
   font-size: 20px;
   font-weight: 600;
-  z-index: 4;
+  z-index: 21;
   top: 294px;
   right: 32px;
   width: 40px;
@@ -471,6 +461,8 @@ h3 {
   border-radius: 4px;
   background-color: #CCC;
   background-size: contain;
+  background-image: url(../images/person_icon_rail.png);
+  background-position: bottom;
   background-repeat: no-repeat;
   cursor: pointer;
 }
@@ -479,7 +471,7 @@ h3 {
   position: absolute;
   border-radius: 100%;
   border: 4px solid #ffffff;
-  z-index: 4;
+  z-index: 21;
   background-color: #CCC;
   top: 322px;
   right: 27px;
@@ -488,31 +480,98 @@ h3 {
 }
 
 #startChatWrapper {
-  width: 320px;
-  height: 160px;
+  width: 290px;
 }
 
 #startChatWrapper #startChatProfile {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   margin-top: 10px;
+  border: 2px solid #ffffff;
   background-size: contain;
   border-radius: 100%;
   background-color: #F0F2F5;
   box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-#startChatWrapper .startChatPicBox {
+#startChatWrapper .startChatThemeWrapper {
+  padding-top: 16px;
+  margin-top: 12px;
+  border-top: 1px solid #F0F2F5;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer {
+  position: relative;
+  margin-bottom: 14px;
+  width: 100%;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .startChatPicBox {
   width: 100px;
   height: 80px;
   border-radius: 6px;
   background-color: #F0F2F5;
-  float: left;
-  margin: 18px 10px 0 0;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer ul {
+  position: absolute;
+  margin: -2px 0 0 36px;
+  padding: 0;
+  left: 110px;
+  top: 2px;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer ul li {
+  margin-bottom: 6px;
+  letter-spacing: .02em;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumName {
+  color: #444;
+  line-height: 1.2em;
+  padding: 2px 0px 6px 0px;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumSubject {
+  color: #888;
+  line-height: 1.03em;
+  padding-bottom: 3px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumStats {
+  color: #888;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+#startChatWrapper .startChatThemeWrapper #seeMoreGallery {
+  padding: 3px 6px 8px 2px !important;
+  cursor: pointer;
+}
+
+#startChatWrapper .startChatThemeWrapper #seeMoreGallery:hover {
+  text-decoration: underline;
 }
 
 #startChatWrapper .startChatPicBox:last-child {
   margin-right: 0px;
+}
+
+#startChatWrapper .african {
+  background-image: url(../images/themes/African.png);
+}
+
+#startChatWrapper .pigs {
+  background-image: url(../images/themes/Pigs.png);
+}
+
+#startChatWrapper .backyards {
+  background-image: url(../images/themes/Backyards.png);
 }
 
 .messageContainer {
@@ -555,6 +614,8 @@ h3 {
   width: 42px;
   height: 42px;
   background-size: contain;
+  background-position: bottom;
+  background-image: url(../images/person_icon_rail.png);
   box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 2px 2px 3px inset rgba(0, 0, 0, 0.15);
@@ -949,10 +1010,9 @@ h3 {
 }
 
 #infoBox {
-  /* Black box that appears over mugs */
   position: absolute;
   max-width: 360px;
-  padding: 10px 20px;
+  padding: 6px 14px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -962,10 +1022,12 @@ h3 {
   display: table;
   background-color: #ffffff;
   z-index: 10;
+  opacity: 0;
   right: -300px;
   border-radius: 4px;
   color: #72767D;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all .2s linear;
 }
 
 #infoBox .nameHolder ul li {
@@ -974,6 +1036,11 @@ h3 {
   text-align: left;
   margin: 0 0 0 -36px !important;
   padding: 0 0 0 -20px !important;
+}
+
+.infoboxFadeIn {
+  right: 110px !important;
+  opacity: 1 !important;
 }
 
 .nameHolder {
