--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -30,7 +30,11 @@ a {
 
 h3 {
   margin-bottom: -6px;
-  color: #1c1e21;
+  color: #7088D7;
+  font-size: 20px;
+  font-weight: 400;
+  display: box;
+  padding-bottom: 6px;
 }
 
 #homepage h10 {
@@ -338,7 +342,7 @@ h3 {
   display: table-cell;
   margin-top: 100px;
   width: 100%;
-  border-bottom: 1px solid #DEDEDE;
+  border-bottom: 1px dotted #AAA;
 }
 
 #logOutBtn {
@@ -406,21 +410,22 @@ h3 {
   top: -12px;
   display: table-cell;
   width: 72px;
-  border-bottom: 1px solid #DEDEDE;
+  border-bottom: 1px dotted #AAA;
 }
 
-#rightRail #chooseAlbumBox {
+#chooseAlbumBox {
   top: 135px;
   background-image: url(../images/chooseAlbumBtn.png);
 }
 
-#rightRail #uploadAlbumBox {
+#uploadAlbumBox {
   top: 188px;
   background-image: url(../images/uploadAlbumBtn.png);
 }
 
-#rightRail .railItemsClass {
+.railItemsClass {
   position: absolute;
+  z-index: 21;
   width: 100px;
   height: 40px;
   right: 0;
@@ -429,7 +434,7 @@ h3 {
   cursor: pointer;
 }
 
-#rightRail .railItemsClass:hover {
+.railItemsClass:hover {
   background-position: right center;
 }
 
@@ -495,10 +500,27 @@ h3 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+#startChatWrapper #startChatProfileName {
+  position: absolute;
+  text-transform: capitalize;
+  font-size: 20px;
+  font-weight: 700;
+  color: #1c1e21;
+  top: 29px;
+  left: 88px;
+}
+
+#startChatWrapper #startChatProfileOccupation {
+  position: absolute;
+  top: 53px;
+  left: 88px;
+  font-size: 13px;
+}
+
 #startChatWrapper .startChatThemeWrapper {
   padding-top: 16px;
   margin-top: 12px;
-  border-top: 1px solid #F0F2F5;
+  border-top: 1px dotted #CCC;
 }
 
 #startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer {
@@ -516,7 +538,7 @@ h3 {
 
 #startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer ul {
   position: absolute;
-  margin: -2px 0 0 36px;
+  margin: -2px 0 0 46px;
   padding: 0;
   left: 110px;
   top: 2px;
@@ -530,7 +552,7 @@ h3 {
 #startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumName {
   color: #444;
   line-height: 1.2em;
-  padding: 2px 0px 6px 0px;
+  padding: 2px 0px 7px 0px;
   font-weight: 500;
   font-size: 14px;
 }
@@ -538,20 +560,25 @@ h3 {
 #startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumSubject {
   color: #888;
   line-height: 1.03em;
-  padding-bottom: 3px;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumStats {
-  color: #888;
+  padding-bottom: 4px;
   font-weight: 400;
   font-size: 13px;
 }
 
+#startChatWrapper .startChatThemeWrapper .startChatPicBoxContainer .albumStats {
+  color: #AAA;
+  font-weight: 400;
+  font-size: 12px;
+}
+
 #startChatWrapper .startChatThemeWrapper #seeMoreGallery {
   padding: 3px 6px 8px 2px !important;
+  font-size: 13px;
   cursor: pointer;
+}
+
+#startChatWrapper .startChatThemeWrapper #seeMoreGallery span {
+  text-transform: capitalize;
 }
 
 #startChatWrapper .startChatThemeWrapper #seeMoreGallery:hover {
@@ -1027,15 +1054,23 @@ h3 {
   border-radius: 4px;
   color: #72767D;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: all .2s linear;
+  transition: all .2s ease-out;
 }
 
 #infoBox .nameHolder ul li {
   list-style: none;
   line-height: 1.8em;
   text-align: left;
-  margin: 0 0 0 -36px !important;
-  padding: 0 0 0 -20px !important;
+  margin: 0 0 0 -45px !important;
+  padding: 0 0 0 -29px !important;
+}
+
+#infoBox .nameHolder ul li label, input {
+  cursor: pointer;
+}
+
+#infoBox .nameHolder ul li label:hover {
+  color: #1c1e21;
 }
 
 .infoboxFadeIn {
@@ -1048,10 +1083,13 @@ h3 {
   vertical-align: middle;
 }
 
-.nameHolder p {
+.nameHolder h21 {
   line-height: 1.5em;
   color: #555;
   font-weight: 400;
+  display: block;
+  max-width: 304px;
+  padding: 8px 0px 10px 0px;
 }
 
 .fa-exclamation-circle {
@@ -1064,6 +1102,14 @@ h3 {
 
 .infoHere span {
   display: none;
+}
+
+.extend {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -90px;
+  width: 100px;
 }
 
 #aboutPage {
