--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,9 +13,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: #202225;
-  overflow: hidden;
   font-family: 'Roboto', sans-serif;
   letter-spacing: .02em;
+  scroll-behavior: smooth;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 a {
@@ -37,6 +41,26 @@ h3 {
   padding-bottom: 6px;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #AAA;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #72767D;
+}
+
 #homepage h10 {
   font-family: 'Roboto', sans-serif;
   padding-bottom: 4px;
@@ -54,10 +78,12 @@ h3 {
   top: 50%;
   margin-top: -225px;
   height: 450px;
+  right: 0px;
 }
 
 #home-container {
   position: absolute;
+  height: 100vh;
   z-index: 3;
   box-sizing: border-box;
   display: flex;
@@ -247,7 +273,7 @@ h3 {
   cursor: default;
 }
 
-#about {
+#aboutLink {
   position: absolute;
   z-index: 3;
   bottom: 20px;
@@ -260,8 +286,26 @@ h3 {
   font-weight: 300;
 }
 
-#about span:hover {
+#aboutLink:hover {
   color: #CCC;
+  cursor: pointer;
+}
+
+#backToTop {
+  position: absolute;
+  z-index: 3;
+  bottom: 20px;
+  right: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  display: inline-block;
+  color: #72767D;
+  letter-spacing: .03em;
+  font-weight: 300;
+}
+
+#backToTop:hover {
+  color: #1c1e21;
   cursor: pointer;
 }
 
@@ -276,7 +320,7 @@ h3 {
   top: 50%;
   margin-top: -270px;
   width: 170px;
-  height: 540px;
+  height: 505px;
   border-radius: 8px;
   background-color: #202225;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
@@ -1112,17 +1156,102 @@ h3 {
   width: 100px;
 }
 
-#aboutPage {
+.hideme {
+  opacity: 0;
+  transform: translateY(50px);
+  animation-duration: 500ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+.hideme.reveal-elem {
+  opacity: 0;
+  animation-name: reveal-elem;
+}
+
+@keyframes reveal-elem {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+#aboutSection {
+  position: relative;
+  overflow: hidden;
+  top: 100vh;
   height: 100vh;
+  width: 100%;
   background-color: #F0F2F5;
 }
 
-#aboutPage p {
-  line-height: 1.9em;
+#aboutWrapper {
+  position: absolute;
+  z-index: 3;
+  width: 600px;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#aboutWrapper p {
+  line-height: 1.7em;
   color: #72767D;
 }
 
-#aboutWrapper {
-  width: 900px;
-  margin: 90px auto 0;
+#aboutWrapper p span {
+  color: #1c1e21;
+  font-weight: 500;
+}
+
+#aboutWrapper h1 {
+  color: #202225;
+  font-size: 60px;
+  font-weight: 400;
+  margin: 24px 0px 26px 0px;
+}
+
+#aboutWrapper h3 {
+  color: #7088D7;
+  font-weight: 500;
+  letter-spacing: .01em;
+}
+
+#parallaxBack, #parallaxMiddle, #parallaxFront {
+  font-size: 100px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  justify-content: center;
+  align-items: middle;
+  place-items: center;
+}
+
+#parallaxFront {
+  background-image: url(../images/awardsFront.png);
+  background-size: contain;
+  z-index: 2;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+}
+
+#parallaxBack {
+  background-image: url(../images/awardsBack.png);
+  background-size: 75%;
+  z-index: 1;
+  background-position: bottom center;
+  background-repeat: no-repeat;
 }
