--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,9 +16,12 @@ body {
     margin: 0;
     padding: 0;
     background-color: $bkg-dark;
-    overflow: hidden;
     font-family: 'Roboto', sans-serif;
     letter-spacing: .02em;
+    scroll-behavior: smooth;
+}
+html{
+    overflow-x: hidden;
 }
 a{
     text-decoration: none;
@@ -35,6 +38,25 @@ h3{
     font-weight: 400;
     display: box;
     padding-bottom: 6px;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: $bkg-light;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: $bkg-grey-hover;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background:$text;
 }
 // Homepage STARTS
 #homepage h10{
@@ -53,9 +75,11 @@ h3{
     top: 50%;
     margin-top: -225px;
     height: 450px;
+    right: 0px;
 }
 #home-container{
     position: absolute;
+    height: 100vh;
     z-index: 3;
     box-sizing:border-box;
     display: flex;
@@ -239,7 +263,7 @@ h3{
     }
 }
 
-#about{
+#aboutLink{
     position: absolute;
     z-index: 3;
     bottom: 20px;
@@ -251,8 +275,24 @@ h3{
     letter-spacing: .03em;
     font-weight: 300;
 }
-#about span:hover{
+#aboutLink:hover{
     color: #CCC;
+    cursor: pointer;
+}
+#backToTop{
+    position: absolute;
+    z-index: 3;
+    bottom: 20px;
+    right: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+    display: inline-block;
+    color: $text;
+    letter-spacing: .03em;
+    font-weight: 300;
+}
+#backToTop:hover{
+    color: $textDark;
     cursor: pointer;
 }
 #greet{
@@ -265,7 +305,7 @@ h3{
     top:50%;
     margin-top: -270px;
     width: 170px;
-    height: 540px;
+    height: 505px;
     border-radius: 8px;
     background-color: $bkg-dark;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
@@ -1050,17 +1090,91 @@ h3{
     right: -90px;
     width: 100px;
 }
-//// About page
+.hideme{
+    opacity: 0;
+    transform: translateY(50px);
+    animation-duration: 500ms;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+.hideme.reveal-elem{
+    opacity: 0;
+    animation-name: reveal-elem;
+}
+@keyframes reveal-elem {
+    from { opacity: 0; transform: translateY(50px)}
+    to { opacity: 1; transform: translateY(0px)}
+}
 
-#aboutPage{
+
+//// About Section
+#aboutSection{
+    position: relative;
+    overflow: hidden;
+    top:100vh;
     height: 100vh;
+    width: 100%;
     background-color: $bkg-grey;
 }
-#aboutPage p{
-    line-height: 1.9em;
-    color: $text;
-}
 #aboutWrapper{
-    width: 900px;
-    margin: 90px auto 0;
+    // position: relative;
+    position: absolute;
+    z-index: 3;
+    width: 600px;
+    top:0;
+    bottom: 0;
+    left:50%;
+    margin-left: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+#aboutWrapper p{
+    line-height: 1.7em;
+    color: $text; 
+}
+#aboutWrapper p span{
+    color: $textDark;
+    font-weight: 500; 
+}
+#aboutWrapper h1{
+    color: $bkg-dark;
+    font-size: 60px;
+    font-weight: 400;
+    margin: 24px 0px 26px 0px;
+}
+#aboutWrapper h3{
+    color: $highlight; 
+    font-weight: 500;
+    letter-spacing: .01em; 
+}
+#parallaxBack, #parallaxMiddle, #parallaxFront{
+    font-size: 100px;
+    position: absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left: 0;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    justify-content: center;
+    align-items: middle;
+    place-items:center;
+}
+
+#parallaxFront{
+    background-image: url(../images/awardsFront.png);
+    background-size: contain;
+    z-index: 2;
+    background-position:bottom center;
+    background-repeat: no-repeat;
+}
+
+#parallaxBack{
+    background-image: url(../images/awardsBack.png);
+    background-size: 75%;
+    z-index: 1;
+    background-position:bottom center;
+    background-repeat: no-repeat;
 }
