--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -9,7 +9,7 @@ $bkg-light: #ffffff;
 $bkg-grey: #F0F2F5;
 $bkg-grey-hover: #AAA;
 $bkg-grey-hover-light: #E5E5E5;
-$green:#00e400;
-$greenHover:#00AF00;
+$green:#70D7AA;
+$greenHover:#89ffcc;
 $bkg-grey-rule:#DEDEDE;
 $altBkg:rgba(0, 0, 0, 0.8);
