--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -58,7 +58,17 @@ h3 {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #72767D;
+  background: #D7C670;
+}
+
+::selection {
+  background: #D7C670;
+  /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+  background: #D7C670;
+  /* Gecko Browsers */
 }
 
 #homepage h10 {
@@ -167,13 +177,13 @@ h3 {
 }
 
 .enterBtnActive {
-  background-color: #00e400 !important;
+  background-color: #70D7AA !important;
   pointer-events: auto !important;
   transition: background-color .1s linear;
 }
 
 .enterBtnActive:hover {
-  background-color: #00AF00 !important;
+  background-color: #89ffcc !important;
 }
 
 .enterBtnActive h11 {
@@ -227,17 +237,29 @@ h3 {
 
 #wisdomBox {
   position: absolute;
+  background-color: #7088D7;
   z-index: 3;
+  padding: 6px 10px 7px 10px;
   font-family: 'Roboto', sans-serif;
-  color: #72767D;
+  color: #1c1e21;
   text-align: right;
   font-size: 14px;
   display: block;
-  bottom: 20px;
-  left: 20px;
+  bottom: 0%;
+  left: 0px;
   letter-spacing: .03em;
-  font-weight: 300;
+  font-weight: 400;
   cursor: pointer;
+}
+
+#wisdomBox:hover {
+  background-color: #D7C670;
+}
+
+#greet {
+  color: #1c1e21;
+  font-weight: 500;
+  letter-spacing: .02em !important;
 }
 
 #registraion {
@@ -260,11 +282,10 @@ h3 {
 }
 
 #registraion #signUpBtn:hover {
-  text-decoration: underline !important;
+  color: #D7C670;
 }
 
 #registraion #logInBtn:hover {
-  text-decoration: underline !important;
   cursor: pointer;
   color: #ffffff;
 }
@@ -291,6 +312,19 @@ h3 {
   cursor: pointer;
 }
 
+#copyRight {
+  position: absolute;
+  z-index: 3;
+  bottom: 20px;
+  left: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  display: inline-block;
+  color: #72767D;
+  letter-spacing: .03em;
+  font-weight: 300;
+}
+
 #backToTop {
   position: absolute;
   z-index: 3;
@@ -307,10 +341,6 @@ h3 {
 #backToTop:hover {
   color: #1c1e21;
   cursor: pointer;
-}
-
-#greet {
-  color: #72767D;
 }
 
 #rectangleUnderLogin {
